[FIX] l10n_mx_edi: Align button right on document_state widget
When the message is short, the copy button is in the middle of the popup instead of being aligned
on the right.

closes odoo/enterprise#46944

X-original-commit: 2b60b4e17817ec3b8f28a3cd8f0de44e506aeb9a

--- a/l10n_mx_edi/static/src/components/document_state/document_state_field.scss
+++ b/l10n_mx_edi/static/src/components/document_state/document_state_field.scss
@@ -3,6 +3,7 @@
     margin: 1rem;
     width: 360px;
     display: flex;
+    justify-content: space-between;
 }
 
 .l10n_mx_edi_document_state_popover_clone {
